--- a/templates/imago.html
+++ b/templates/imago.html
@@ -223,5 +223,10 @@
             }
         }
     </script>
+    <footer>
+    &copy; 2026 NKONVERT par NKALAA. Tous droits réservés. <br>
+    Hébergé de manière sécurisée sur Render.
+    toujours prendre une minute pour wanda.
+</footer>
 </body>
 </html>
