--- a/templates/index.html
+++ b/templates/index.html
@@ -217,7 +217,13 @@
         <h3>Découper PDF</h3>
         <p>Divisez un gros PDF en plusieurs petits fichiers séparés.</p>
     </a>
-
+<a href="/shorten_page" class="tool-card">
+    <div class="icon-box purple">
+        <i class="fas fa-link"></i>
+    </div>
+    <h3>Lien Court</h3>
+    <p>Réduisez vos URLs longues en liens NKONVERT pro et rapides.</p>
+</a>
 </div>
 
 <footer>
@@ -225,6 +231,7 @@
     Hébergé de manière sécurisée sur Render.
     toujours prendre une minute pour wanda.
 </footer>
+
 
 
 
