--- a/templates/index.html
+++ b/templates/index.html
@@ -224,6 +224,15 @@
     <h3>Lien Court</h3>
     <p>Réduisez vos URLs longues en liens NKONVERT pro et rapides.</p>
 </a>
+    
+<a href="/calculateur-obstetrical" class="tool-card">
+    <div class="icon-box pink">
+        <i class="fas fa-stethoscope"></i>
+    </div>
+    <h3>Calculateur Gynéco</h3>
+    <p>Calculez la SA, la HU (Règle de Fournié) et la DPA en un clic pour vos stages.</p>
+</a>
+    
 </div>
 
 <footer>
@@ -231,6 +240,7 @@
     Hébergé de manière sécurisée sur Render.
     toujours prendre une minute pour wanda.
 </footer>
+
 
 
 
