--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="favicon.png">
     <title>NKONVERT | Votre Suite d'Outils Numériques</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -235,6 +236,7 @@
     Hébergé de manière sécurisée sur Render.
     toujours prendre une minute pour wanda.
 </footer>
+
 
 
 
